--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.12",
-    "next": "14.2.4",
+    "framer-motion": "^11.18.2",
+    "next": "^14.2.23",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.9.4",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
